# glowrs

./: Cargo.toml
crates/glowrs/examples/: simple.rs
crates/glowrs/src/core/: embedder.rs  sentence_transformer.rs
crates/glowrs/src/core/config/: model.rs  parse.rs
crates/glowrs/src/model/: embedder.rs
