[workspace]
members = [
	"crates/glowrs",
	"crates/glowrs-server"
]
resolver = "2"
exclude = ["tests", "scripts"]

[workspace.dependencies]
candle-core = { version = "0.8.0", path = "../candle/candle-core" }
candle-nn = { version = "0.8.0", path = "../candle/candle-nn" }
candle-transformers = { version = "0.8.0", path = "../candle/candle-transformers" }
tokenizers = { version = "0.21.0" }
clap = { version = "4.5.17" }

# Enable high optimizations for candle in dev builds
[profile.dev.package]
candle-core = { opt-level = 3 }
candle-nn = { opt-level = 3 }
candle-transformers = { opt-level = 3 }

[workspace.package]
license = "Apache-2.0"
version = "0.5.0"
